traits/tests/will_not_compile/function_parameters_must_be_sized.stderr
error[E0277]: the size for values of type `dyn HasName` cannot be known at compilation time
  --> tests/will_not_compile/function_parameters_must_be_sized.rs:11:37
   |
11 |     let test_string = test_function(name_haver);
   |                       ------------- ^^^^^^^^^^ doesn't have a size known at compile-time
   |                       |
   |                       required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `dyn HasName`
note: required by a bound in `test_function`
  --> tests/will_not_compile/function_parameters_must_be_sized.rs:4:18
   |
4  | fn test_function<T: HasName>(t: &T) -> String {
   |                  ^ required by this bound in `test_function`
help: consider relaxing the implicit `Sized` restriction
   |
4  | fn test_function<T: HasName + ?Sized>(t: &T) -> String {
   |                             ++++++++
